增加评论功能

--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -754,11 +754,11 @@ post:
   # 评论插件
   # Comment plugin
   comments:
-    enable: false
+    enable: true
     # 指定的插件，需要同时设置对应插件的必要参数
     # The specified plugin needs to set the necessary parameters at the same time
     # Options: utterances | disqus | gitalk | valine | waline | changyan | livere | remark42 | twikoo | cusdis | giscus | discuss
-    type: disqus
+    type: valine
 
 
 #---------------------------
@@ -819,18 +819,18 @@ gitalk:
 # Based on LeanCloud
 # See: https://valine.js.org/
 valine:
-  appId:
-  appKey:
-  path: window.location.pathname
-  placeholder:
-  avatar: 'retro'
-  meta: ['nick', 'mail', 'link']
+  appId: zuMknNS1J07kdYXJY2Ho1EnQ-MdYXbMMI
+  appKey: sE1nzsAd23dBI2ueymsOBHSQ
+  path: window.location.pathname # 当前文章页路径，用于区分不同的文章页，以保证正确读取该文章页下的评论列表
+  placeholder: 吐槽一哈!!!!（评论仅会显示昵称，不会显示邮箱） # 占位符
+  avatar: 'retro' # Gravatar 头像展示方式
+  meta: ['nick', 'mail', 'link']  # 评论者相关属性
   requiredFields: []
-  pageSize: 10
-  lang: 'zh-CN'
-  highlight: false
-  recordIP: false
-  serverURLs: ''
+  pageSize: 10 # 评论列表分页，每页条数
+  lang: 'zh-CN' # zh-CN | zh-TW | en | ja
+  highlight: false # 代码是否高亮
+  recordIP: false # 是否记录评论者IP
+  serverURLs: '' # REST API 服务器地址，国际版不填
   emojiCDN:
   emojiMaps:
   enableQQ: false
